fix: without target masks

--- a/notebooks/inference_combined.ipynb
+++ b/notebooks/inference_combined.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import os\n",
@@ -18,14 +18,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-21T22:38:09.562575Z",
-     "end_time": "2023-10-21T22:38:15.473381Z"
+     "start_time": "2023-10-22T00:16:55.710022Z",
+     "end_time": "2023-10-22T00:16:55.726022Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -33,7 +33,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b9c406e8a06043ae948b098e8fff484c"
+       "model_id": "c77a528d1f0749a0a6186360c0e5d0f1"
       }
      },
      "metadata": {},
@@ -51,14 +51,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-21T22:38:15.475380Z",
-     "end_time": "2023-10-21T22:38:17.971960Z"
+     "start_time": "2023-10-22T00:16:55.727023Z",
+     "end_time": "2023-10-22T00:16:57.843701Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def save_images(images, path=''):\n",
@@ -82,14 +82,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-21T22:38:17.964966Z",
-     "end_time": "2023-10-21T22:38:17.982959Z"
+     "start_time": "2023-10-22T00:16:57.846701Z",
+     "end_time": "2023-10-22T00:16:57.859703Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "input_folder = '../cache/in/'\n",
@@ -98,35 +98,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-21T22:38:17.977958Z",
-     "end_time": "2023-10-21T22:38:17.992959Z"
+     "start_time": "2023-10-22T00:16:57.859703Z",
+     "end_time": "2023-10-22T00:16:57.877703Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "from datasets import load_from_disk\n",
     "\n",
     "DATASET_DIR = 'SaffalPoosh/deepFashion-with-masks'\n",
     "dataset = load_from_disk('../data/dataset/train/')\n",
-    "start = 200\n",
-    "count = 3\n",
+    "start = 100\n",
+    "count = 5\n",
     "save_images(dataset['train'][start: start + count]['images'], path=input_folder)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-21T22:38:17.993958Z",
-     "end_time": "2023-10-21T22:38:19.132557Z"
+     "start_time": "2023-10-22T00:16:57.877703Z",
+     "end_time": "2023-10-22T00:16:59.043117Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -134,7 +134,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1c61154e5f3d4ad29d5533481bafbd09"
+       "model_id": "15384a0b85f246a690e91adb909bbb6f"
       }
      },
      "metadata": {},
@@ -146,7 +146,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "66d8eb1bfb6941ffbcbcad45ae750fb7"
+       "model_id": "7bb0da0003784e70b4b9f1a9c2cf7ffc"
       }
      },
      "metadata": {},
@@ -158,7 +158,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7a41dea94565497e9f889d2c71387ecf"
+       "model_id": "e0a627a553fe4c86bdaea8ed2f521c7d"
       }
      },
      "metadata": {},
@@ -170,7 +170,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c6e119e798b048c397b1aabbbd01a77c"
+       "model_id": "788a6ad4baca4677868c4d348d06de25"
       }
      },
      "metadata": {},
@@ -182,7 +182,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d485b52566424db9b8d66db0f104ede2"
+       "model_id": "3c27f43e2bd04fafb5cefdaab1ab802a"
       }
      },
      "metadata": {},
@@ -194,7 +194,175 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "9ee3103f3ea645e4b5001709c1a36e4f"
+       "model_id": "e5418d592f9d45adb6e7bd57bdcd57f3"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "52e20727f1984b1f9ca4286b6c792d4c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "da30469296554efdb6a6090b5e9a9b34"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "99abcd335b37481096721a4b36f3debe"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "5d620ea570004ba2a142805ef2d4ac59"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "cca8d24364044164be4b6d13d6f451b8"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "417bd26c6de74c5e81aaec980289ac34"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "69110f3d9552489f8dd310cde93c0631"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "688f5edf30b440fc888de36a57ef7f5c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "aa532d0531bc450aa6474c4021a6c717"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c7d8d856aadb495ab3a5f994cb789bed"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "84676d9e5ac44bb6aa2cb94a0d0f07f9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "8fe3ec6221404ea695572e4e1b4e52b4"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "347e46d2642c4d7f807564ed8864eae3"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "8d767cf141fd48e6b15219b0be99516a"
       }
      },
      "metadata": {},
@@ -221,14 +389,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-21T22:38:19.131558Z",
-     "end_time": "2023-10-21T22:41:06.148577Z"
+     "start_time": "2023-10-22T00:16:59.046118Z",
+     "end_time": "2023-10-22T00:26:52.262749Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "save_images(generated_images, path=output_folder)"
@@ -236,21 +404,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-21T22:41:06.136576Z",
-     "end_time": "2023-10-21T22:41:07.150581Z"
+     "start_time": "2023-10-22T00:26:52.264752Z",
+     "end_time": "2023-10-22T00:26:55.018885Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-21T22:41:07.151578Z",
-     "end_time": "2023-10-21T22:41:07.167580Z"
+     "start_time": "2023-10-22T00:26:55.019883Z",
+     "end_time": "2023-10-22T00:26:55.034885Z"
     }
    }
   }
